# beeldverwerking

./: README.md  gmon.out
Gabor/template/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gmon.out
Gabor/template/src/: main.cpp
RD/: Analyse.h  Source.cpp  functions.cpp  linehandler.h
Road_detection/: Road_detection.pro  main.cpp  watershedwrapper.cpp  watershedwrapper.h
features/hls_spectrum/: gmon.out
features/hls_spectrum/template/: CMakeLists.txt
features/hls_spectrum/template-build/: CMakeCache.txt  Makefile  cmake_install.cmake  test.cbp
features/hls_spectrum/template/src/: 3dblur.cpp  Bayes.cpp  boundaries.cpp  clustering.cpp  hls.cpp  test.cpp  test.cpp.autosave  voteraster.cpp
features/roc_curves/: CMakeLists.txt
features/roc_curves-build/: CMakeCache.txt  Makefile  cmake_install.cmake  roc_curves.cbp
features/roc_curves/src/: main.cpp
features/roc_curves/src/headers/: Bayes.h  Ifeature.h  dummyFeature.h  graphview.h  roc_analizer.h
features/solution_average/: CMakeLists.txt  gmon.out
features/solution_average-build/: CMakeCache.txt  Makefile  cmake_install.cmake  solution_average.cbp
features/solution_average/src/: main.cpp
obstakels/: Analyse.h  Makefile  Makefile~  functions.cpp  main  main.cpp
plot_images/: hls_cluster_road_sample
roc_curves/: CMakeCache.txt  Makefile  cmake_install.cmake  gmon.out
roc_curves/src/: main.cpp
roc_curves/src/headers/: Bayes.h  Ifeature.h  graphview.h  roc_analizer.h
